# multimodal_fusion

./: CMakeLists.txt  Converter_frametovideo.py  LICENSE  README.md  Rete_neurale.py  classificatore_NN.py  package.xml
dataset/: fusion_dataset.csv
doc/: Experiment.md  comandifusi.csv
doc/NASA-TLX/: NASA-TLX Template.odt
doc/NASA-TLX/Risultati/: Risultati.ods
launch/: classificatore.launch  experiment.launch  gesture_node.launch  multimodal_fusion.launch  voice_node.launch
lightning_logs/version_0/: events.out.tfevents.1674990121.Ubuntu20
lightning_logs/version_0/checkpoints/: epoch=4-step=55.ckpt
lightning_logs/version_1/: events.out.tfevents.1675192882.Ubuntu20
lightning_logs/version_1/checkpoints/: epoch=4-step=55.ckpt
model/: fusion_model.pth
msg/: FusedCommand.msg  TrajectoryError.msg
script/: expManager.py  experiment.py  experiment_conversation.py  experiment_simple.py  fusion.py  multimodal_fusion.py
script/network/: dataset_creation.py  neural_classifier_training.py
script/utils/: command_list.py  move_robot.py  object_list.py  utils.py
scripts/: Fusion_node_withPS.py  Rete_allenata.pth  Rete_neurale.py  classificatore_NN.py  classificatore_NN_con_time.py  classificatore_con_time.py  counter.py  creadataset.py  dict_prove.py  gesto_node.py  move_robot.py  multimodal_fusion.py  neural_classifier.py  prova.py  prova_rete.py  utils.py  voce_node.py
scripts/network/: dataset_creation.py  neural_classifier_training.py
scripts/unimodal_fake/: area_fake.py  gesture_loop.py  voice_fake.py
