<?xml version="1.0"?>
<package format="2">
  <name>multimodal_fusion</name>
  <version>0.0.0</version>
  <description>The multimodal_fusion package</description>

  <author email="davide.ferrari95@unimore.it">Davide Ferrari</author>
  <maintainer email="davide.ferrari95@unimore.it">Davide Ferrari</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
